--- a/.github/workflows/test-pull-request.yml
+++ b/.github/workflows/test-pull-request.yml
@@ -65,25 +65,12 @@ jobs:
       - name: Enable Corepack for Yarn v3
         run: corepack enable
 
-      - name: Install Yarn v3
-        uses: borales/actions-yarn@v3
-        with:
-          cmd: set version stable
-
       - name: Install dependencies
-        uses: borales/actions-yarn@v3
-        env:
-          YARN_ENABLE_IMMUTABLE_INSTALLS: false
-        with:
-          cmd: install
+        run: yarn install
 
       - name: Check internal links
-        uses: borales/actions-yarn@v3
-        with:
-          cmd: test:links
+        run: yarn test:links
 
       - name: Build site
         if: ${{ success() }}
-        uses: borales/actions-yarn@v3
-        with:
-          cmd: build
+        run: yarn build
